--- a/directories/fiware-summit/agenda/program/sitemap.html
+++ b/directories/fiware-summit/agenda/program/sitemap.html
@@ -67,24 +67,22 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/welcome-coffee.html">Welcome Coffee</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/official-speeches.html">Official Speeches</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/dr--hicham-el-habti--president-of-um6p.html">Dr. Hicham El Habti, President of UM6P</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/representative-of-the-minister-of-digital-transition-and-administrative-reform.html">Representative of the Minister of Digital Transition and Administrative Reform</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/general-direction-of-territorial-collectivities.html">General Direction of Territorial Collectivities</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/aawatif-hayar--chairman-of-the-smart-cities-morocco-alliance.html">Aawatif Hayar, Chairman of the Smart Cities Morocco Alliance</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/prof--aawatif-hayar--scientific-chair-of-smart-cities-morocco-roadshow.html">Prof. Aawatif Hayar, Scientific Chair of Smart Cities Morocco Roadshow</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/introduction-to-the-fiware-global-summit-and-fiware-community-news.html">Introduction to the FIWARE Global Summit and FIWARE Community News</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/coffee-break.html">Coffee Break</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/global-fiware-use-cases-shaping-smart-cities-for-2030.html">Global FIWARE Use Cases Shaping Smart Cities for 2030</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/first-operational-smart-territory-in-morocco---berkane-experience.html">First Operational Smart Territory in Morocco – Berkane Experience</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/fiware-for-cities-from-europe-to-the-world--from-smart-to-ai-ready.html">FIWARE for Cities From Europe to the World, From Smart to AI-ready</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/fiware-training--day-one.html">FIWARE Training: Day One</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/introduction-to-json-ld.html">Introduction to JSON-LD</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/fiware-for-cities-from-europe-to-the-world--from-smart-to-ai-ready.html">FIWARE for Cities From Europe to the World, From Smart to AI-ready</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/telefónica---fiware--building-smart-cities-and-destinations.html">Telefónica &amp; FIWARE: Building Smart Cities and Destinations</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/the-use-case-is-the-goal--interoperability-is-the-means--fiware-is-the-core-.html">The Use Case is the Goal. Interoperability is the Means. FIWARE is the Core.</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/smart-data-models.html">Smart Data Models</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/the-use-case-of-madrid--london-and-singapore.html">The Use Case of Madrid, London and Singapore</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/smart-data-models.html">Smart Data Models</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/next-generation-governance--where-smart-meets-digital.html">Next-Generation Governance: Where Smart Meets Digital</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/moroccan-context-for-digital-administration--enhancing-public-services--governance--and-transparency-through-digital-transformation.html">Moroccan Context for Digital Administration: Enhancing Public Services, Governance, and Transparency Through Digital Transformation</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/e-gov-moroccan-context.html">E-gov Moroccan Context</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/general-direction-of-territorial-collectivities--working-to-implement-smart-territories.html">General Direction of Territorial Collectivities: Working to Implement Smart Territories</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/digital-twin-programming-using-ngsi-ld--crud--registrations--subscriptions.html">Digital Twin Programming using NGSI-LD: CRUD, Registrations, Subscriptions</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/supporting-moroccan-ecosystem-and-fostering-multi-stakeholder-collaboration.html">Supporting Moroccan Ecosystem and Fostering Multi-stakeholder Collaboration</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/innovative-digital-platforms-for-smart-governance-and-urban-management.html">Innovative Digital Platforms for Smart Governance and Urban Management</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/smart-metropolis-fiware-ihub--leading-brazil-s-smart-city-transformation-with-open-standards.html">Smart Metropolis FIWARE iHub: Leading Brazil’s Smart City Transformation with Open Standards</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/lunch.html">Lunch</a></li>
@@ -109,6 +107,7 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/ai---data-driven-cities-for-the-fifa-world-cup-2030.html">AI &amp; Data-Driven Cities for the FIFA World Cup 2030</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/collaboration-of-tegel-projekt-and-mitsubishi-electric--shaping-future-of-smart-cities-with-smart-buildings.html">Collaboration of Tegel Projekt and Mitsubishi Electric: Shaping Future of Smart Cities with Smart Buildings</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/disrupting-global-construction-with-open-source-and-ai.html">Disrupting Global Construction with Open Source and AI</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/ai-context-in-morocco-and-ai-solutions-for-urban-management.html">AI Context in Morocco and AI Solutions for Urban Management</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/data-as-a-strategic-asset--lessons-from-porto-s-urban-platform-and-the-beopen-project.html">Data as a Strategic Asset: Lessons from Porto’s Urban Platform and the BeOpen Project</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/coffee-break.html">Coffee Break</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/sdg-driven-solutions-for-a-sustainable-world-cup-legacy.html">SDG-Driven Solutions for a Sustainable World Cup Legacy</a></li>
@@ -118,10 +117,12 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/from-silos-to-synergy--building-smart-governance-with-interoperability.html">From Silos to Synergy: Building Smart Governance with Interoperability</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/unlocking-the-potential-of-data-spaces-for-smart-cities-and-communities.html">Unlocking the Potential of Data Spaces for Smart Cities and Communities</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/national---international-aid-and-state-grants--leveraging-global-support-for-urban-development.html">National &amp; International Aid and State Grants: Leveraging Global Support for Urban Development</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/laila-slassi--president-of-efe-maroc.html">Laila Slassi, President of EFE Maroc</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/ngsi-ld-farm-exercises.html">NGSI-LD Farm Exercises</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/building-the-future--sustainable-smart-cities-for-resilient-urban-living.html">Building the Future: Sustainable Smart Cities for Resilient Urban Living</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/improving-urban-management-through-generative-ai-and-fiware.html">Improving Urban Management through Generative AI and FIWARE</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/opensustie---data-integration-of-smart-buildings-and-smart-cities.html">OpenSUSTIE - Data Integration of Smart Buildings and Smart Cities</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/timo-mueller--project-director-at-giz-morocco.html">Timo Mueller, Project Director at GIZ Morocco</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/rainbrain-in-belgium-cities.html">Rainbrain in Belgium Cities</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/smart-monitoring-of-stormwater-retention-basins.html">Smart Monitoring of Stormwater Retention Basins</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/building-futureproof-cities-through-effective-use-of-data.html">Building Futureproof Cities through Effective Use of Data</a></li>
