--- a/directories/fiware-summit/speakers/filters.html
+++ b/directories/fiware-summit/speakers/filters.html
@@ -83,10 +83,9 @@
                         <option value='prometheus-x'>Prometheus-x</option>
                         <option value='rhamna-provincial-council'>Rhamna Provincial Council</option>
                         <option value='rise'>RISE</option>
-                        <option value='secmotic'>Secmotic</option>
                         <option value='senlab'>SenLab</option>
                         <option value='sirus'>Sirus</option>
-                        <option value='smart-cities-morocco-alliance'>Smart Cities Morocco Alliance</option>
+                        <option value='smart-cities-morocco-roadshow'>Smart Cities Morocco Roadshow</option>
                         <option value='teamdev-ecosystem'>TeamDev Ecosystem</option>
                         <option value='telefonica'>Telefonica</option>
                         <option value='ufrn'>UFRN</option>
