--- a/directories/fiware-summit/agenda/filters.html
+++ b/directories/fiware-summit/agenda/filters.html
@@ -71,6 +71,7 @@
           <option value='global-fiware-use-cases-shaping-smart-cities-for-2030'>Global FIWARE Use Cases Shaping Smart Cities for 2030</option>
           <option value='governing-trust--legal-and-data-space-frameworks-for-secure-cities'>Governing Trust: Legal and Data Space Frameworks for Secure Cities</option>
           <option value='international-academic-cooperation-for-digital-transformation'>International Academic Cooperation for Digital Transformation</option>
+          <option value='national---international-aid-and-state-grants--leveraging-global-support-for-urban-development'>National &amp; International Aid and State Grants: Leveraging Global Support for Urban Development</option>
           <option value='next-generation-governance--where-smart-meets-digital'>Next-Generation Governance: Where Smart Meets Digital</option>
           <option value='official-speeches'>Official Speeches</option>
           <option value='robotics---iot-agents'>Robotics &amp; IoT Agents</option>
@@ -94,11 +95,11 @@
       <option value="*">Speakers</option>
           <option value='alberto-abella'>Alberto Abella</option>
           <option value='suna-akbayir'>Suna Akbayir</option>
+          <option value='mohamed-amine-souissi'>Mohamed Amine Souissi</option>
           <option value='fatima-azmarkou'>Fatima Azmarkou</option>
           <option value='joão-bastos'>João Bastos</option>
           <option value='mohamed-benabbad'>Mohamed Benabbad</option>
           <option value='ali-benfattoum'>Ali Benfattoum</option>
-          <option value='jose-benítez'>Jose Benítez</option>
           <option value='az-eddine-bennani'>Az-Eddine Bennani</option>
           <option value='massimo-bertoncini'>Massimo Bertoncini</option>
           <option value='vinith-bhandari'>Vinith Bhandari</option>
@@ -116,6 +117,7 @@
           <option value='matthias-de-bièvre'>Matthias de Bièvre</option>
           <option value='redouan-dinar'>Redouan Dinar</option>
           <option value='hicham-el-habti'>Hicham El Habti</option>
+          <option value='mohamed-el-yacoubi'>Mohamed El Yacoubi</option>
           <option value='mohammed-essaidi'>Mohammed Essaidi</option>
           <option value='mohamed-essaidi'>Mohamed Essaidi</option>
           <option value='guven-fidan'>Guven Fidan</option>
@@ -138,16 +140,20 @@
           <option value='yasunori-mochizuki'>Yasunori Mochizuki</option>
           <option value='lydia-montandon'>Lydia Montandon</option>
           <option value='andrea-montieri'>Andrea Montieri</option>
+          <option value='timo-mueller'>Timo Mueller</option>
           <option value='sachiko-muto'>Sachiko Muto</option>
           <option value='khalil-nossair'>Khalil Nossair</option>
           <option value='manfredi-pistone'>Manfredi Pistone</option>
           <option value='michael-prange'>Michael Prange</option>
+          <option value='mohamed-réda-el-alaoui'>Mohamed Réda El Alaoui</option>
+          <option value='mohamed-réda-el-alaoui'>Mohamed Réda El Alaoui</option>
           <option value='matteo-repetto'>Matteo Repetto</option>
           <option value='luigi-romano'>Luigi Romano</option>
           <option value='rubén-rosales-patón'>Rubén Rosales Patón</option>
           <option value='alessandro-rossi'>Alessandro Rossi</option>
           <option value='joaquín-salvachúa'>Joaquín Salvachúa</option>
           <option value='björn-schwarze'>Björn Schwarze</option>
+          <option value='laila-slassi'>Laila Slassi</option>
           <option value='megumi-suzuki'>Megumi Suzuki</option>
           <option value='sanaa-tazi'>Sanaa Tazi</option>
           <option value='ángeles-tejado'>Ángeles Tejado</option>
