--- a/directories/fiware-summit/agenda/calendar.html
+++ b/directories/fiware-summit/agenda/calendar.html
@@ -240,7 +240,7 @@ li {
 		</li>
 		<li>
             
-			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=Next-Generation Governance: Where Smart Meets Digital&details=Smart GovernanceThis session highlights how Morocco’s digital transformation of public services is a strategic enabler for hosting the FIFA World Cup 2030.++Speakers:+Andrea Cruciani,Mohammed Essaidi,Jure Lampe,Frederico Lopes,Ryad Mezzour,Khalil Nossair,Mohamed Réda El Alaoui,,&ctz=Africa/Casablanca&location=Auditorium Atlas&dates=20250522T115000/20250522T245000">Next-Generation Governance: Where Smart Meets Digital</a>
+			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=Next-Generation Governance: Where Smart Meets Digital&details=Smart GovernanceThis session highlights how Morocco’s digital transformation of public services is a strategic enabler for hosting the FIFA World Cup 2030.++Speakers:+Andrea Cruciani,Mohamed Essaidi,Jure Lampe,Frederico Lopes,Ryad Mezzour,Khalil Nossair,Mohamed Réda El Alaoui,,&ctz=Africa/Casablanca&location=Auditorium Atlas&dates=20250522T115000/20250522T245000">Next-Generation Governance: Where Smart Meets Digital</a>
              - Smart Governance
 			<div class="date-time">
 	            <span class="separator-dot"></span>
@@ -284,7 +284,7 @@ li {
 		</li>
 		<li>
             
-			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=Supporting Moroccan Ecosystem and Fostering Multi-stakeholder Collaboration&details=Smart Governance - Next-Generation Governance: Where Smart Meets Digital++++Speakers:+Mohammed Essaidi,,&ctz=Africa/Casablanca&location=Auditorium Atlas&dates=20250522T240300/20250522T241000">Supporting Moroccan Ecosystem and Fostering Multi-stakeholder Collaboration</a>
+			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=Supporting Moroccan Ecosystem and Fostering Multi-stakeholder Collaboration&details=Smart Governance - Next-Generation Governance: Where Smart Meets Digital++++Speakers:+Mohamed Essaidi,,&ctz=Africa/Casablanca&location=Auditorium Atlas&dates=20250522T240300/20250522T241000">Supporting Moroccan Ecosystem and Fostering Multi-stakeholder Collaboration</a>
              - Smart Governance - Next-Generation Governance: Where Smart Meets Digital
 			<div class="date-time">
 	            <span class="separator-dot"></span>
