fgs25 speakers updates

--- a/directories/fiware-summit/speakers/filters.html
+++ b/directories/fiware-summit/speakers/filters.html
@@ -57,6 +57,7 @@
                         <option value='aws'>AWS</option>
                         <option value='city-of-marrakech'>City of Marrakech</option>
                         <option value='cnr-imati'>CNR-IMATI</option>
+                        <option value='dgct---government-of-morocco'>DGCT – Government of Morocco</option>
                         <option value='dgssi'>DGSSI</option>
                         <option value='dial-technologies'>Dial Technologies</option>
                         <option value='dksr'>DKSR</option>
@@ -81,6 +82,7 @@
                         <option value='porto-digital'>Porto Digital</option>
                         <option value='prisalya-consulting'>PRISALYA Consulting</option>
                         <option value='prometheus-x'>Prometheus-x</option>
+                        <option value='region-of-rabat-salé-kénitra'>Region of Rabat-Salé-Kénitra</option>
                         <option value='rhamna-provincial-council'>Rhamna Provincial Council</option>
                         <option value='rise'>RISE</option>
                         <option value='senlab'>SenLab</option>
@@ -120,6 +122,7 @@
                         <option value='expert'>Expert</option>
                         <option value='fellow'>Fellow</option>
                         <option value='general-secretary'>General Secretary</option>
+                        <option value='governor'>Governor</option>
                         <option value='head-of-unit'>Head of Unit</option>
                         <option value='lead'>Lead</option>
                         <option value='manager'>Manager</option>
@@ -130,6 +133,7 @@
                         <option value='president'>President</option>
                         <option value='professor'>Professor</option>
                         <option value='researcher'>Researcher</option>
+                        <option value='scientific-chair'>Scientific Chair</option>
                         <option value='software-engineer'>Software Engineer</option>
                         <option value='technical-manager'>Technical Manager</option>
                         <option value='vp'>VP</option>
