--- a/directories/fiware-summit/agenda/filters.html
+++ b/directories/fiware-summit/agenda/filters.html
@@ -139,12 +139,11 @@
           <option value='yasunori-mochizuki'>Yasunori Mochizuki</option>
           <option value='lydia-montandon'>Lydia Montandon</option>
           <option value='andrea-montieri'>Andrea Montieri</option>
-          <option value='timo-mueller'>Timo Mueller</option>
+          <option value='timo-müller'>Timo Müller</option>
           <option value='sachiko-muto'>Sachiko Muto</option>
           <option value='khalil-nossair'>Khalil Nossair</option>
           <option value='manfredi-pistone'>Manfredi Pistone</option>
           <option value='michael-prange'>Michael Prange</option>
-          <option value='mohamed-réda-el-alaoui'>Mohamed Réda El Alaoui</option>
           <option value='mohamed-réda-el-alaoui'>Mohamed Réda El Alaoui</option>
           <option value='matteo-repetto'>Matteo Repetto</option>
           <option value='luigi-romano'>Luigi Romano</option>
