fgs25 speakers updates

--- a/directories/fiware-summit/speakers/filters.html
+++ b/directories/fiware-summit/speakers/filters.html
@@ -57,7 +57,7 @@
                         <option value='aws'>AWS</option>
                         <option value='city-of-marrakech'>City of Marrakech</option>
                         <option value='cnr-imati'>CNR-IMATI</option>
-                        <option value='dgct---government-of-morocco'>DGCT – Government of Morocco</option>
+                        <option value='dgct---kingdom-of-morocco'>DGCT – Kingdom of Morocco</option>
                         <option value='dgssi'>DGSSI</option>
                         <option value='dial-technologies'>Dial Technologies</option>
                         <option value='dksr'>DKSR</option>
@@ -70,9 +70,9 @@
                         <option value='fiware-tsc'>FIWARE TSC</option>
                         <option value='futurecraft-foundation'>FutureCraft Foundation</option>
                         <option value='giz'>GIZ</option>
-                        <option value='government-of-morocco'>Government of Morocco</option>
                         <option value='grupotx'>GrupoTX</option>
                         <option value='ishare-foundation'>iSHARE Foundation</option>
+                        <option value='kingdom-of-morocco'>Kingdom of Morocco</option>
                         <option value='latitudo-40'>Latitudo 40</option>
                         <option value='majal-berkane'>Majal Berkane</option>
                         <option value='meaningfy'>Meaningfy</option>
