--- a/directories/fiware-summit/speakers/people.html
+++ b/directories/fiware-summit/speakers/people.html
@@ -76,7 +76,7 @@
                 </div>
             </div>
         </div>
-        <div id="item-3" class="grid-item dgct---government-of-morocco   manager ">
+        <div id="item-3" class="grid-item dgct---kingdom-of-morocco   manager ">
             <div class='f-cat active'>
                 <div class='city-photo-container'>
                     <picture>
@@ -87,7 +87,7 @@
                 <div class='profile-details'>
                     <h6 class='name' data-modal='3'>Mohamed Amine Souissi</h6>
                     <h4 class='position' data-modal='3'>Project Manager</h4>
-                    <h5 class='company-link'><a target='_blank' href='https://www.collectivites-territoriales.gov.ma/' rel='noopener'>DGCT – Government of Morocco</a></h5>
+                    <h5 class='company-link'><a target='_blank' href='https://www.collectivites-territoriales.gov.ma/' rel='noopener'>DGCT – Kingdom of Morocco</a></h5>
                 </div>
                 <div class='icons'>
                         <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/mohamed-amine-souissi-3640093/' rel='noopener'><span
@@ -278,7 +278,7 @@
                 </div>
                 <div class='profile-details'>
                     <h6 class='name' data-modal='11'>David Campo</h6>
-                    <h4 class='position' data-modal='11'>Tech Expert &amp; Evangelist – AI</h4>
+                    <h4 class='position' data-modal='11'>Tech Expert &amp; Evangelis</h4>
                     <h5 class='company-link'><a target='_blank' href='https://www.fiware.org/' rel='noopener'>FIWARE Foundation</a></h5>
                 </div>
                 <div class='icons'>
@@ -1069,7 +1069,7 @@
                 </div>
             </div>
         </div>
-        <div id="item-43" class="grid-item government-of-morocco   minister ">
+        <div id="item-43" class="grid-item kingdom-of-morocco   minister ">
             <div class='f-cat active'>
                 <div class='cat-bio' data-modal='43'>
                 <div class='city-photo-container'>
@@ -1082,7 +1082,7 @@
                 <div class='profile-details'>
                     <h6 class='name cat-bio' data-modal='43'>Ryad Mezzour</h6>
                     <h4 class='position cat-bio' data-modal='43'>Minister of Industry and Trade</h4>
-                    <h5 class='company-link'><a target='_blank' href='https://www.maroc.ma/en' rel='noopener'>Government of Morocco</a></h5>
+                    <h5 class='company-link'><a target='_blank' href='https://www.maroc.ma/en' rel='noopener'>Kingdom of Morocco</a></h5>
                 </div>
                 <div class='icons'>
                         <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/ryad-mezzour-65158b3/' rel='noopener'><span
@@ -1351,7 +1351,7 @@
                 </div>
             </div>
         </div>
-        <div id="item-54" class="grid-item dgct---government-of-morocco   director ">
+        <div id="item-54" class="grid-item dgct---kingdom-of-morocco   director ">
             <div class='f-cat active'>
                 <div class='city-photo-container'>
                     <picture>
@@ -1362,7 +1362,7 @@
                 <div class='profile-details'>
                     <h6 class='name' data-modal='54'>Mohamed Réda El Alaoui</h6>
                     <h4 class='position' data-modal='54'>Director Development and Digital Transformation</h4>
-                    <h5 class='company-link'><a target='_blank' href='https://www.collectivites-territoriales.gov.ma/' rel='noopener'>DGCT – Government of Morocco</a></h5>
+                    <h5 class='company-link'><a target='_blank' href='https://www.collectivites-territoriales.gov.ma/' rel='noopener'>DGCT – Kingdom of Morocco</a></h5>
                 </div>
                 <div class='icons'>
                         <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/el-alaoui-mohammed-reda-30b266261/' rel='noopener'><span
@@ -1717,7 +1717,7 @@
                 </div>
                 <div class='profile-details'>
                     <h6 class='name cat-bio' data-modal='68'>Ken Zangelin</h6>
-                    <h4 class='position cat-bio' data-modal='68'>Senior Architect &amp; Evangelist – Context Broker</h4>
+                    <h4 class='position cat-bio' data-modal='68'>Senior Architect &amp; Evangelist</h4>
                     <h5 class='company-link'><a target='_blank' href='https://www.fiware.org/' rel='noopener'>FIWARE Foundation</a></h5>
                 </div>
                 <div class='icons'>
