--- a/directories/fiware-summit/agenda/program/sitemap.html
+++ b/directories/fiware-summit/agenda/program/sitemap.html
@@ -80,13 +80,13 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/smart-data-models.html">Smart Data Models</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/next-generation-governance--where-smart-meets-digital.html">Next-Generation Governance: Where Smart Meets Digital</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/moroccan-context-for-digital-administration--enhancing-public-services--governance--and-transparency-through-digital-transformation.html">Moroccan Context for Digital Administration: Enhancing Public Services, Governance, and Transparency Through Digital Transformation</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/general-direction-of-territorial-collectivities--working-to-implement-smart-territories.html">General Direction of Territorial Collectivities: Working to Implement Smart Territories</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/direction-of-territorial-collectivities--working-to-implement-smart-territories.html">Direction of Territorial Collectivities: Working to Implement Smart Territories</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/digital-twin-programming-using-ngsi-ld--crud--registrations--subscriptions.html">Digital Twin Programming using NGSI-LD: CRUD, Registrations, Subscriptions</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/supporting-moroccan-ecosystem-and-fostering-multi-stakeholder-collaboration.html">Supporting Moroccan Ecosystem and Fostering Multi-stakeholder Collaboration</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/innovative-digital-platforms-for-smart-governance-and-urban-management.html">Innovative Digital Platforms for Smart Governance and Urban Management</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/smart-metropolis-fiware-ihub--leading-brazil-s-smart-city-transformation-with-open-standards.html">Smart Metropolis FIWARE iHub: Leading Brazil’s Smart City Transformation with Open Standards</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/lunch.html">Lunch</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/keynote-speech--from-smart-meters-to-digital-twins--how-fiwarebox-simplifies-and-accelerates-fiware-based-smart-city-data-integration-and-visualization-on-a-budget.html">Keynote Speech: From Smart Meters to Digital Twins: How FIWAREBox Simplifies and Accelerates FIWARE-Based Smart City Data Integration and Visualization on a Budget</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/how-fiwarebox-simplifies-and-accelerates-fiware-based-smart-city-data-on-a-budget.html">How FIWAREBox Simplifies and Accelerates FIWARE-Based Smart City Data on a Budget</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/blue-cities-of-tomorrow--ai---iot-for-smart-water-and-resilient-cities.html">Blue Cities of Tomorrow: AI &amp; IoT for Smart Water and Resilient Cities</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/recreate-water-tool.html">RECREATE Water Tool</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/smart-data-spaces-for-high-profile-events--enabling-interoperability-and-trust.html">Smart Data Spaces for High Profile Events: Enabling Interoperability and Trust</a></li>
@@ -97,7 +97,7 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/machine-learning--mlops---fiware.html">Machine Learning, MLOps &amp; FIWARE</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/aquaspice-real-time-monitoring-platform.html">Aquaspice Real Time Monitoring Platform</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/asteriot--a-scalable-fiware-based-platform-for-smart-water-management-and-early-warning-systems.html">AsterIoT: A Scalable FIWARE-Based Platform for Smart Water Management and Early Warning Systems</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/official-speech--his-excellency-mr--ryad-mezzour--minister-of-industry-and-trade-of-the-kingdom-of-morocco.html">Official Speech: His Excellency Mr. Ryad Mezzour, Minister of Industry and Trade of the Kingdom of Morocco</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/mr--ryad-mezzour--minister-of-industry-and-trade.html">Mr. Ryad Mezzour, Minister of Industry and Trade</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/waterverse--water-data-management-ecosystem-for-water-data-spaces.html">Waterverse, Water Data Management Ecosystem for Water Data Spaces</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/enabling-interoperable-data-exchange-between-systems.html">Enabling Interoperable Data Exchange Between Systems</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/introduction-to-iot-agents.html">Introduction to IoT Agents</a></li>
