--- a/directories/fiware-summit/agenda/agenda.html
+++ b/directories/fiware-summit/agenda/agenda.html
@@ -925,20 +925,20 @@
   </div>
 
 
-<div class='grid-item ai---iot blue-cities-of-tomorrow--ai---iot-for-smart-water-and-resilient-cities jose-luis-alvaro didac-colominas eloy-hernandez lydia-montandon ángeles-tejado 22-may'>
+<div class='grid-item ai---iot opportunities-from-each-panelist jose-luis-alvaro didac-colominas eloy-hernandez lydia-montandon ángeles-tejado 22-may'>
     <div class="gridElementTextContainer">
-      <a href="./program?id=blue-cities-of-tomorrow--ai---iot-for-smart-water-and-resilient-cities">
+      <a href="./program?id=opportunities-from-each-panelist">
         <div class="chip-track">
           <div class="track light-purple">AI &amp; IoT</div>
           
         </div>
-        <p class="panel-title  session light-purple">Blue Cities of Tomorrow: AI &amp; IoT for Smart Water and Resilient Cities</p> 
+        <p class="panel-title  session light-purple">Opportunities From Each Panelist</p> 
         <span class="excerpt"></span>
         <div class="panel-info">
           <div class="date-time">
             <h3 class="date">22 May</h3>
             <span class="separator-dot"></span>
-            <span class="time">2:30 pm – 3:00 pm</span>
+            <span class="time">2:30 pm – 3:20 pm</span>
           </div>
           <span class="separator-dot"></span>
           <span class="place">Room Saghro</span>
@@ -952,7 +952,7 @@
       </div>
     </div>
     <div class="foot">
-      <a class="btn-primary" href="./program?id=blue-cities-of-tomorrow--ai---iot-for-smart-water-and-resilient-cities">
+      <a class="btn-primary" href="./program?id=opportunities-from-each-panelist">
         <span class="material-symbols-outlined">info</span>
           Session details
       </a>
@@ -2259,7 +2259,7 @@
           <div class="date-time">
             <h3 class="date">22 May</h3>
             <span class="separator-dot"></span>
-            <span class="time">4:40 pm – 4:40 pm</span>
+            <span class="time">4:40 pm – 4:50 pm</span>
           </div>
           <span class="separator-dot"></span>
           <span class="place">Room Saghro</span>
