fgs25 agenda content and images updates

--- a/directories/fiware-summit/agenda/program/sitemap.html
+++ b/directories/fiware-summit/agenda/program/sitemap.html
@@ -92,7 +92,7 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/smart-data-spaces-for-high-profile-events--enabling-interoperability-and-trust.html">Smart Data Spaces for High Profile Events: Enabling Interoperability and Trust</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/from-fragmentation-to-federation--the-power-of-collaboration-in-data-space-development.html">From Fragmentation to Federation: The Power of Collaboration in Data Space Development</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/leveraging-linked-data--smart-cities-and-enhanced-egovernment-through-data-harmonisation.html">Leveraging Linked Data: Smart Cities and Enhanced eGovernment through Data Harmonisation</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/trusted-data-for-circular-futures--digital-product-passports---data-sovereignty-in-climate-resilient-cities.html">Trusted Data for Circular Futures: Digital Product Passports &amp; Data Sovereignty in Climate-Resilient Cities</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/digital-product-passports---data-sovereignty-in-climate-resilient-cities.html">Digital Product Passports &amp; Data Sovereignty in Climate-Resilient Cities</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/digital-product-passports-and-digital---circular-cities--architectures-for-sovereign--scalable-city-data.html">Digital Product Passports and Digital &amp; Circular Cities; Architectures for Sovereign, Scalable City Data</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/machine-learning--mlops---fiware.html">Machine Learning, MLOps &amp; FIWARE</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/aquaspice-real-time-monitoring-platform.html">Aquaspice Real Time Monitoring Platform</a></li>
@@ -116,7 +116,7 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/earthdatainsight--turning-satellite-data-into-smart-decisions.html">EarthDataInsight: Turning Satellite Data into Smart Decisions</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/from-silos-to-synergy--building-smart-governance-with-interoperability.html">From Silos to Synergy: Building Smart Governance with Interoperability</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/unlocking-the-potential-of-data-spaces-for-smart-cities-and-communities.html">Unlocking the Potential of Data Spaces for Smart Cities and Communities</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/national---international-aid-and-state-grants--leveraging-global-support-for-urban-development.html">National &amp; International Aid and State Grants: Leveraging Global Support for Urban Development</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/national---international-aid-and-state-grants.html">National &amp; International Aid and State Grants</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/laila-slassi--president-of-efe-maroc.html">Laila Slassi, President of EFE Maroc</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/ngsi-ld-farm-exercises.html">NGSI-LD Farm Exercises</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/building-the-future--sustainable-smart-cities-for-resilient-urban-living.html">Building the Future: Sustainable Smart Cities for Resilient Urban Living</a></li>
@@ -145,7 +145,7 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/cybersecurity-context-in-morocco-and-challenges.html">Cybersecurity Context in Morocco and Challenges</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/break.html">Break</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/governing-trust--legal-and-data-space-frameworks-for-secure-cities.html">Governing Trust: Legal and Data Space Frameworks for Secure Cities</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/navigating-legal-challenges-in-data-spaces--lessons-from-the-eu-experience-.html">Navigating Legal Challenges in Data Spaces: Lessons From the EU experience.</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/navigating-legal-challenges-in-data-spaces--lessons-from-the-eu-experience.html">Navigating Legal Challenges in Data Spaces: Lessons From the EU experience</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/talking-with-your-smart-solution.html">Talking With Your Smart Solution</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/exploiting-fiware-potential-for-ehds-regulation-compliance.html">Exploiting FIWARE Potential for EHDS Regulation Compliance</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/university-5-0-dataspace--a-smart-campus-ecosystem-living-lab-for-ai-driven-innovation-in-the-region.html">University 5.0 Dataspace: a Smart Campus Ecosystem living lab for AI-driven innovation in the region</a></li>
