--- a/directories/fiware-summit/agenda/filters.html
+++ b/directories/fiware-summit/agenda/filters.html
@@ -65,13 +65,14 @@
           <option value='best-smart-cities-use-cases-in-morocco'>Best Smart Cities Use Cases in Morocco</option>
           <option value='blue-cities-of-tomorrow--ai---iot-for-smart-water-and-resilient-cities'>Blue Cities of Tomorrow: AI &amp; IoT for Smart Water and Resilient Cities</option>
           <option value='data-spaces---security'>Data Spaces &amp; Security</option>
+          <option value='digital-product-passports---data-sovereignty-in-climate-resilient-cities'>Digital Product Passports &amp; Data Sovereignty in Climate-Resilient Cities</option>
           <option value='fiware-catalog'>FIWARE Catalog</option>
           <option value='fiware-core-concepts'>FIWARE Core Concepts</option>
           <option value='from-silos-to-synergy--building-smart-governance-with-interoperability'>From Silos to Synergy: Building Smart Governance with Interoperability</option>
           <option value='global-fiware-use-cases-shaping-smart-cities-for-2030'>Global FIWARE Use Cases Shaping Smart Cities for 2030</option>
           <option value='governing-trust--legal-and-data-space-frameworks-for-secure-cities'>Governing Trust: Legal and Data Space Frameworks for Secure Cities</option>
           <option value='international-academic-cooperation-for-digital-transformation'>International Academic Cooperation for Digital Transformation</option>
-          <option value='national---international-aid-and-state-grants--leveraging-global-support-for-urban-development'>National &amp; International Aid and State Grants: Leveraging Global Support for Urban Development</option>
+          <option value='national---international-aid-and-state-grants'>National &amp; International Aid and State Grants</option>
           <option value='next-generation-governance--where-smart-meets-digital'>Next-Generation Governance: Where Smart Meets Digital</option>
           <option value='official-speeches'>Official Speeches</option>
           <option value='robotics---iot-agents'>Robotics &amp; IoT Agents</option>
@@ -79,7 +80,6 @@
           <option value='secure-smart-city'>Secure Smart City</option>
           <option value='shuttle-bus'>Shuttle Bus</option>
           <option value='smart-data-spaces-for-high-profile-events--enabling-interoperability-and-trust'>Smart Data Spaces for High Profile Events: Enabling Interoperability and Trust</option>
-          <option value='trusted-data-for-circular-futures'>Trusted Data for Circular Futures</option>
     </select>
   </div>
   <!-- <div class="filter-element">
