--- a/directories/fiware-summit/agenda/calendar.html
+++ b/directories/fiware-summit/agenda/calendar.html
@@ -504,7 +504,7 @@ li {
 		</li>
 		<li>
             
-			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=Digital Product Passports &amp; Data Sovereignty in Climate-Resilient Cities&details=Circular Economy &amp; Urban Development - Digital Product Passports &amp; Data Sovereignty in Climate-Resilient Cities++++Speakers:+Vinith Bhandari,,&ctz=Africa/Casablanca&location=Room Siroua&dates=20250522T151000/20250522T153000">Digital Product Passports &amp; Data Sovereignty in Climate-Resilient Cities</a>
+			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=Orchestrating Data Sovereignty for Circular and Climate-Resilient Cities&details=Circular Economy &amp; Urban Development - Digital Product Passports &amp; Data Sovereignty in Climate-Resilient Cities++++Speakers:+Vinith Bhandari,,&ctz=Africa/Casablanca&location=Room Siroua&dates=20250522T151000/20250522T153000">Orchestrating Data Sovereignty for Circular and Climate-Resilient Cities</a>
              - Circular Economy &amp; Urban Development - Digital Product Passports &amp; Data Sovereignty in Climate-Resilient Cities
 			<div class="date-time">
 	            <span class="separator-dot"></span>
