--- a/directories/fiware-summit/agenda/program/sitemap.html
+++ b/directories/fiware-summit/agenda/program/sitemap.html
@@ -102,7 +102,7 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/enabling-interoperable-data-exchange-between-systems.html">Enabling Interoperable Data Exchange Between Systems</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/introduction-to-iot-agents.html">Introduction to IoT Agents</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/ideation.html">IDEATION</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/digital-product-passports---data-sovereignty-in-climate-resilient-cities.html">Digital Product Passports &amp; Data Sovereignty in Climate-Resilient Cities</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/orchestrating-data-sovereignty-for-circular-and-climate-resilient-cities.html">Orchestrating Data Sovereignty for Circular and Climate-Resilient Cities</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/interoperability-unleashed-for-data-spaces-specification-languages-and-scoring-for-big-data-and-ai-integration.html">Interoperability Unleashed for Data Spaces Specification Languages and Scoring for Big data and AI integration</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/ai---data-driven-cities-for-the-fifa-world-cup-2030.html">AI &amp; Data-Driven Cities for the FIFA World Cup 2030</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/collaboration-of-tegel-projekt-and-mitsubishi-electric--shaping-future-of-smart-cities-with-smart-buildings.html">Collaboration of Tegel Projekt and Mitsubishi Electric: Shaping Future of Smart Cities with Smart Buildings</a></li>
