fgs25 agenda content updates

--- a/directories/fiware-summit/agenda/program/sitemap.html
+++ b/directories/fiware-summit/agenda/program/sitemap.html
@@ -67,6 +67,8 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/welcome-coffee.html">Welcome Coffee</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/official-speeches.html">Official Speeches</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/dr--hicham-el-habti--president-of-um6p.html">Dr. Hicham El Habti, President of UM6P</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/mohamed-el-yacoubi--wali-of-the-region-of-rabat-salé-kénitra.html">Mohamed El Yacoubi, Wali of the Region of Rabat-Salé-Kénitra</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/mohamed-amine-souissi--direction-of-territorial-collectivities.html">Mohamed Amine Souissi, Direction of Territorial Collectivities</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/prof--aawatif-hayar--scientific-chair-of-smart-cities-morocco-roadshow.html">Prof. Aawatif Hayar, Scientific Chair of Smart Cities Morocco Roadshow</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/introduction-to-the-fiware-global-summit-and-fiware-community-news.html">Introduction to the FIWARE Global Summit and FIWARE Community News</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/coffee-break.html">Coffee Break</a></li>
