fgs25 agenda updates

--- a/directories/fiware-summit/agenda/calendar.html
+++ b/directories/fiware-summit/agenda/calendar.html
@@ -1034,7 +1034,7 @@ li {
 		</li>
 		<li>
             
-			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=Best Smart Cities Use Cases in Morocco&details=Research &amp; Development++Speakers:+Fatima Azmarkou,Mohamed Benabbad,Az-Eddine Bennani,Redouan Dinar,Mohamed Essaidi,,&ctz=Africa/Casablanca&location=Auditorium Atlas&dates=20250523T113000/20250523T243000">Best Smart Cities Use Cases in Morocco</a>
+			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=Best Smart Cities Use Cases in Morocco&details=Research &amp; Development++Speakers:+Fatima Azmarkou,Az-Eddine Bennani,Redouan Dinar,Mohamed Essaidi,,&ctz=Africa/Casablanca&location=Auditorium Atlas&dates=20250523T113000/20250523T243000">Best Smart Cities Use Cases in Morocco</a>
              - Research &amp; Development
 			<div class="date-time">
 	            <span class="separator-dot"></span>
@@ -1045,7 +1045,7 @@ li {
 		</li>
 		<li>
             
-			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=Benguerir &amp; UM6P: Building Morocco’s Green Innovation Capital&details=Research &amp; Development - Best Smart Cities Use Cases in Morocco++++Speakers:+Mohamed Benabbad,,&ctz=Africa/Casablanca&location=Auditorium Atlas&dates=20250523T113000/20250523T114000">Benguerir &amp; UM6P: Building Morocco’s Green Innovation Capital</a>
+			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=Benguerir &amp; UM6P: Building Morocco’s Green Innovation Capital&details=Research &amp; Development - Best Smart Cities Use Cases in Morocco++&ctz=Africa/Casablanca&location=Auditorium Atlas&dates=20250523T113000/20250523T114000">Benguerir &amp; UM6P: Building Morocco’s Green Innovation Capital</a>
              - Research &amp; Development - Best Smart Cities Use Cases in Morocco
 			<div class="date-time">
 	            <span class="separator-dot"></span>
