fgs25 agenda content updates

--- a/directories/fiware-summit/agenda/agenda.html
+++ b/directories/fiware-summit/agenda/agenda.html
@@ -1930,7 +1930,7 @@
   </div>
 
 
-<div class='grid-item sustainable-smart-city sdg-driven-solutions-for-a-sustainable-world-cup-legacy suna-akbayir massimo-bertoncini gert-de-tant andrea-montieri sachiko-muto björn-schwarze 22-may'>
+<div class='grid-item sustainable-smart-city sdg-driven-solutions-for-a-sustainable-world-cup-legacy suna-akbayir massimo-bertoncini gert-de-tant andrea-montieri björn-schwarze 22-may'>
     <div class="gridElementTextContainer">
       <a href="./program?id=sdg-driven-solutions-for-a-sustainable-world-cup-legacy">
         <div class="chip-track">
