--- a/directories/fiware-summit/agenda/calendar.html
+++ b/directories/fiware-summit/agenda/calendar.html
@@ -614,7 +614,7 @@ li {
 		</li>
 		<li>
             
-			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=SDG-Driven Solutions for a Sustainable World Cup Legacy&details=Sustainable Smart CityThis session highlights how sustainable energy and water management are essential to building climate-resilient cities ready to host the FIFA World Cup 2030.++Speakers:+Suna Akbayir,Massimo Bertoncini,Gert De Tant,Andrea Montieri,Sachiko Muto,Björn Schwarze,,&ctz=Africa/Casablanca&location=Auditorium Atlas&dates=20250522T163000/20250522T173000">SDG-Driven Solutions for a Sustainable World Cup Legacy</a>
+			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=SDG-Driven Solutions for a Sustainable World Cup Legacy&details=Sustainable Smart CityThis session highlights how sustainable energy and water management are essential to building climate-resilient cities ready to host the FIFA World Cup 2030.++Speakers:+Suna Akbayir,Massimo Bertoncini,Gert De Tant,Andrea Montieri,Björn Schwarze,,&ctz=Africa/Casablanca&location=Auditorium Atlas&dates=20250522T163000/20250522T173000">SDG-Driven Solutions for a Sustainable World Cup Legacy</a>
              - Sustainable Smart City
 			<div class="date-time">
 	            <span class="separator-dot"></span>
