ieee ice event upload

--- a/directories/events-directory/filters.html
+++ b/directories/events-directory/filters.html
@@ -75,6 +75,7 @@
                 <option value='data-sharing'>Data Sharing</option>
                 <option value='data-spaces'>Data Spaces</option>
                 <option value='digital-product-passport'>Digital Product Passport</option>
+                <option value='engineering'>Engineering</option>
                 <option value='global-summit'>Global Summit</option>
                 <option value='smart-cities'>Smart Cities</option>
                 <option value='smart-energy'>Smart Energy</option>
