Updates URL IoT Lab iHub

--- a/directories/ihubs/iHubs.html
+++ b/directories/ihubs/iHubs.html
@@ -725,7 +725,7 @@
                     <span class='chips-gradient'></span>
                 </div>
             <div class="icons">
-                <a class="cat-website" target="_blank" href="https://www.udgalliance.org/" rel="noopener">
+                <a class="cat-website" target="_blank" href="https://iotlab.com/fiware-ihub/" rel="noopener">
                     <span class="icon website"></span>
                 </a>
             </div>
